coffee machine end date

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                                 title="Coffee Machine IoT">
                                         </figure>
                                     </div>
-                                    <h3 class="styled">Coffee Machine</h3>
+                                    <h3 class="styled">Twitter Coffee Machine</h3>
                                     <h6 class="styled position">Internet of Things</h6>
                                     <p class="software">Software: Python</p>
                                     <div class="separator"></div>
@@ -133,7 +133,7 @@
                                             <p style="text-align: left;">Built an automatic Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through Twitter by tagging my Coffee Machine's Twitter account with 
                                                 the hashtags #darkroast, #mediumroast, or #lightroast and when it is activated through a Siri voice command "make coffee" it makes me coffee based on which roast of coffee bean got voted on the most in the 
                                                 last 24 hours.</p>
-                                            <p class="date">Aug 2020 - Present</p>
+                                            <p class="date">Aug 2020 - Sep 2020</p>
                                         </div>
                                         <button onclick="window.location.href = 'https://github.com/Mgla96/CoffeeMachineIoT'"
                                             type="button" class="btn btn-outline-dark ">
