--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
                                         and Java.
                                         I have experience developing full-stack websites and web
                                         applications handling everything from the design process to the back-end
-                                        infrastructure. The Simulation Game I built for the Chemistry department
+                                        infrastructure. The simulation game I built for the Chemistry department
                                         at UC Santa Barbara is an example of one of these web applications which you can
                                         view
                                         <a href="https://github.com/Mgla96/HappyCows">here</a>.
