updating about me and project descriptions

--- a/about.html
+++ b/about.html
@@ -145,29 +145,28 @@
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto" style="padding-top: 1rem;">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
                                     <h3 id="ev2">Skills</h3>
-                                    <p>
+                                    <p class="normalp">
                                         The languages I am most proficient in are C++ and Python, followed by Javascript
                                         and Java.
                                         I have experience developing full-stack websites and web
                                         applications handling everything from the design process to the back-end
                                         infrastructure. The simulation game I built for the Chemistry department
-                                        at UC Santa Barbara is an example of one of these web applications which you can
+                                        at UC Santa Barbara is an example of one of these web applications built with Node.js which you can
                                         view
-                                        <a href="https://github.com/Mgla96/HappyCows">here</a>.
+                                        <a href="https://github.com/Mgla96/HappyCows">here</a>. 
+                                        Another example is the Python Flask web application I built to solve the problem of fitness equipment being very scarce and
+                                        hard to find due to COVID-19. This application was utilized by over 3.25k users from July-September and the source code can be viewed
+                                        <a href="https://github.com/Mgla96/GymEquipmentFinder">here</a>. 
                                         </br></br>
-                                        I also have experience with Python in developing Machine learning models
-                                        without the assistance of libraries such as scikit-learn as well as
-                                        creating scripts to automate workflow. I created some of these scripts for
-                                        researchers in the Ocean Recoveries Lab at UC Santa Barbara. They needed to
+                                        I also have experience with Python in developing Machine Learning models, AI programs, automation scripts, and embedded software. 
+                                        An example of automation scripts I have created were for researchers working in the Ocean Recoveries Lab at UC Santa Barbara. They needed to
                                         measure the growth of coral reefs through converting
                                         their photos taken in the field to correctly scaled 3D models. This
                                         process required over 10 steps for every model and researchers had to be
                                         on standby to do the next step after model rendering had completed which could
                                         take numerous hours to render one model.
-                                        I created two python scripts that automated this process for all models
-                                        at once so only 1 manual step was required in total saving the
-                                        researchers valuable time. You can view these scripts
-                                        <a href="https://github.com/Mgla96/OceanRecoveryLabScripts">here</a>.
+                                        I created two python scripts that automated this process for all models so only 1 manual step was required in total saving the
+                                        researchers valuable time. The source code for this project can be viewed <a href="https://github.com/Mgla96/OceanRecoveryLabScripts">here</a>.
                                     </p>
                                 </div>
                             </div>
