--- a/index.html
+++ b/index.html
@@ -379,13 +379,11 @@
                                     </button>
                                     <div class="collapse" id="collapse16">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Due to the closure of gyms because of COVID-19,
-                                                fitness equipment was sold out everywhere and was very hard to come by.
-                                                Constructed a Python Flask web application hosted on Heroku that utilizes
+                                            <p style="text-align: left;">Due to the closure of gyms because of COVID-19, available fitness fitness equipment was sold out everywhere and time-consuming to find.
+                                                Solved this problem by constructing a Python Flask web application hosted on Heroku that utilizes
                                                 cron jobs to scrape equipment information with Beautiful Soup from popular fitness websites and store them in a Postgres
-                                                database. This application displays all in stock items from these fitness websites so all the effort of searching for in stock equipment is already done. 
-                                                I used the scraper successfully for myself when building a home gym and
-                                                converted it into a web application for others to use as well.</p>
+                                                database. All in stock items are displayed on the front end for users to easily see what is available. Utilized by over 3.25k users from July-September 2020.
+                                                </p>
                                             <p class="date">Jul 2020</p>
                                         </div>
                                         <button
