--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                                     </button>
                                     <div class="collapse" id="collapse14">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Built a quadcopter that is controlled with a first-person-view real time video feed to better understand how all the hardware components such as the electronic speed controllers, PDB, radio and video receivers, brushless DC motors, and gyroscope interact with firmware placed on the flight controller.
+                                            <p style="text-align: left;">Built a quadcopter that is controlled with a first-person-view real time video feed to better understand how all the hardware components such as the electronic speed controllers, PDB, radio and video receivers/transmitters, brushless DC motors, and gyroscope interact with firmware placed on the flight controller.
                                             </p>
                                             <p class="date">Oct 2018 - Dec 2018</p>
                                         </div>
