--- a/about.html
+++ b/about.html
@@ -148,9 +148,8 @@
                                     <p class="normalp">
                                         The languages I am most proficient in are C++ and Python, followed by Javascript
                                         and Java.
-                                        I have experience developing full-stack websites and web
-                                        applications handling everything from the design process to the back-end
-                                        infrastructure. The simulation game I built for the Chemistry department
+                                        I have experience developing websites and web
+                                        applications working with the full-stack as well as database and user interface design. The simulation game I built for the Chemistry department
                                         at UC Santa Barbara is an example of one of these web applications built with Node.js which you can
                                         view
                                         <a href="https://github.com/Mgla96/HappyCows">here</a>. 
